<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_search">PADC-Job Search</string>
    <string name="pulse">PADC-Pulse</string>


    <string name="book_title">မျကည္ျပာနွင့္ ခ်စ္ျခင္းဧ၊္ နဂတစ္မ်ား</string>
    <string name="book_author">နီကိုရဲ</string>

    <string name="menu_winzin">PADC-၀န္ဇင္း</string>
    <string name="menu_movie">PADC-ရုပ္ရွင္</string>
    
    <string name="books">\'ဟာသ\' စာအုပ္ အမ်ိ ုးအစားမ်ား</string>




</resources>
