<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/left_menu_linked_in"
            android:checked="true"
            android:icon="@drawable/ic_assignment_returned_black_24dp"
            android:title="LinkedIn"
            />

        <item
            android:id="@+id/left_menu_job_search"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/job_search"/>

        <item
            android:id="@+id/left_menu_pulse"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/pulse"/>

        <item
            android:id="@+id/left_menu_movie"
            android:icon="@drawable/ic_error_black_24dp"
            android:title="@string/menu_movie"/>

        <item
            android:id="@+id/left_menu_winzin"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/menu_winzin"/>

    </group>
</menu>