<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="net.sandi.myapplication.fragments.WinZinFragment">

    <ImageView
        android:id="@+id/img_cartoon"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@drawable/win_zin2"
        android:layout_marginRight="16dp"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/img_cartoon"
        android:layout_toRightOf="@id/img_cartoon"
        android:orientation="vertical">
        <net.sandi.myapplication.components.textviews.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/book_title"/>
        <net.sandi.myapplication.components.textviews.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/book_author"/>
        <net.sandi.myapplication.components.textviews.MMTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="price"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/img_cartoon"
        android:layout_alignBottom="@id/img_cartoon">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Buy"
            android:background="#cec30f"
            android:layout_marginBottom="8dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sample"
            android:background="#cec30f"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_book_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_cartoon"
        android:text="File size : 2.43MB"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/txt_book_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_book_size"
        android:text="Summary"
        android:layout_marginTop="16dp"
        android:textColor="#cec30f"
        />
    <TextView
        android:id="@+id/txt_blah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_book_summary"
        android:text="..."
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/txt_related_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_blah"
        android:text="Related Books"
        android:textColor="#cec30f"
        android:layout_marginBottom="8dp"
        />
    <net.sandi.myapplication.components.textviews.MMTextView
        android:id="@+id/txt_comics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_related_book"
        android:text="@string/books"
        android:textColor="#cec30f"
        android:layout_marginBottom="16dp"
        />
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_comics">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginLeft="8dp"
                android:src="@drawable/win_zin1"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginLeft="8dp"
                android:src="@drawable/win_zin2"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginLeft="8dp"
                android:src="@drawable/win_zin3"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginLeft="8dp"
                android:src="@drawable/win_zin4"/>
        </LinearLayout>

    </HorizontalScrollView>




</RelativeLayout>
